Add tests for event creation and speaker validation